# TAPL-rs

./: Cargo.toml
ch3-arith/: Cargo.toml
ch3-arith/src/: arith.lalrpop  main.rs  utils.rs
ch5-untyped/: Cargo.toml  prelude.f
ch5-untyped/src/: main.rs  untyped.lalrpop  utils.rs
