[package]
name    = "untyped"
version = "0.1.0"
authors = ["chirsz-ever <chirsz@foxmail.com>"]
edition = "2018"
build   = "build.rs"

[build-dependencies]
lalrpop = { version = "0.19", features = ["lexer"] }

[dependencies]
lalrpop-util = "0.19"
rustyline    = "6.2"
structopt    = "0.3"
anyhow       = "1.0"
